@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.445 2006/12/19 14:38:38 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.446 2006/12/19 14:51:34 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -353,6 +353,9 @@ PH/52 Applied John Jetmore's patch to allow tls-on-connect and STARTTLS to be
 
 PH/53 Added missing "#include <time.h>" to pcre/pcretest.c (this was a PCRE
       bug, fixed in subsequent PCRE releases).
+
+PH/54 Applied Robert Bannocks' patch to avoid a problem with references that
+      arises when using the Solaris LDAP libraries (but not with OpenLDAP).
 
 
 Exim version 4.63
